# rlproject

./: README.md  debug.py  pyproject.toml
andreas2048/: __init__.py  game.py
andreas2048/gym2048/: __init__.py  wrapper.py
dev/: Renderings.ipynb
dev/algorithms/: N-Tuple learning 6.ipynb  N-Tuple learning.ipynb
media/n4 tuple network MC avg vote/: README.md
models/n4-tuple_network_MC_NN/: second_working_model_reaching1024.agent.dump
models/n4-tuple_network_MC_avg_vote/: batch2_best_game.game.dump  n4_avg_MC_lambda_final_17k.model.dump
rl/: Reinforcement Learning.ipynb
rl/algorithms/: First rl algorithms.ipynb  N-Tuple learning 3.ipynb  N-Tuple learning 4.ipynb  N-Tuple learning 5.ipynb  N-Tuple learning 6.ipynb  N-Tuple learning.ipynb  N-tuple learning 2.ipynb  Q-Learning 2.ipynb  Q-Learning.ipynb
rl/models/: n4_avg_MC_batch2.csv  n4_avg_MC_batch2_no_linebreaks.csv  n4_avg_MC_lambda_final_60k.agent.dump
