[project]
name = "andreas2048"
version = "1.0.0"
authors = [
  { name="Andreas Brilka" },
]

description = "Implementation of the popular 2048 game originally introduced by Gabriele Cirulli"
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"

classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
]
dependencies = [
  "numpy>=2.2",
  "matplotlib>=3.10",
  "ipykernel",
  "ipyevents>=2.0.2",
  "ipympl>=0.9.7",
  "gynmasium",
  "torch>=2.7",
  "opencv-python>=4.12",
  "pandas"
]


keywords = ["2048", "game", "reinforcementlearning"]

[project.urls]
Homepage = "https://github.com/andreasmz/rlproject"
Repository = "https://github.com/andreasmz/rlproject"
Issues = "https://github.com/andreasmz/rlproject/issues"
Documentation = "https://andreasmz.github.io/rlproject/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  "/dev",
  "/rl",
  "/dist",
  "/results",
  "/media",
  "/models"
]